fix recipe description text-overflow

--- a/ui/client/src/components/recipe/Recipe.scss
+++ b/ui/client/src/components/recipe/Recipe.scss
@@ -187,6 +187,7 @@
   overflow: auto;
   white-space: pre-wrap;
   word-wrap: break-word;
+  text-overflow: unset;
 }
 
 .bottom-padding {
